--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+bot-telegram = "2.6.0"
 kotlin = "1.8.20-RC"
 kotlin-logging = "4.0.0-beta-2"
 kotlinx-coroutines = "1.7.0-Beta"
@@ -18,6 +19,7 @@ validation-jackson = "2.14.2"
 validation-konform = "0.4.0"
 
 [libraries]
+bot-telegram = { module = "eu.vendeli:telegram-bot", version.ref = "bot-telegram" }
 kotlin-logging = { module = "io.github.microutils:kotlin-logging-jvm", version.ref = "kotlin-logging" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
