--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -17,27 +17,5 @@
 # CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE
 # OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-group=dev.realmkit.bot
-version=1.0-SNAPSHOT
-sourceCompatibility=19
-# Gradle Settings
-org.gradle.caching=true
-org.gradle.unsafe.configuration-cache=false
-org.gradle.jvmargs=-XX:MaxMetaspaceSize=1g
-org.gradle.parallel=true
-org.gradle.configureondemand=true
-# Kotlin Settings
-kotlin.code.style=official
-kotlin.incremental=true
-kapt.use.worker.api=true
-kapt.incremental.apt=true
-# SystemProperties
-## Coverage
-systemProp.sonar.host.url=https://sonarcloud.io/
-systemProp.sonar.organization=realmkit
-systemProp.sonar.projectKey=RealmKit_bot
-systemProp.sonar.sources=src/main/kotlin
-systemProp.sonar.tests=src/test/kotlin
-systemProp.sonar.exclusions=src/main/kotlin/dev/realmkit/bot/BotServiceApplication.kt
-systemProp.sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
-systemProp.sonar.kotlin.detekt.reportPaths=build/reports/detekt/detekt.xml
+BOT_TOKEN=SOME_TOKEN
+BOT_COMMANDS=dev.realmkit.bot.app.controller
